# carbide

./: CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: KickSynthVoice.cpp  KickSynthVoice.h  WaveformCapture.h
Source/Presets/: FactoryPresets.cpp  FactoryPresets.h
Source/Tests/: DspSelfTests.cpp
docs/: ARCHITECTURE.md  LOGIC_DEV_LOOP.md  TUNING_GUIDE.md
